# glyphforge

./: .gitignore  CLAUDE.md  pyproject.toml  requirements.txt  settings.json
glyphforge/: __init__.py  __main__.py  alphabet.py  bezier.py  components.py  expansion.py  generator.py  geometry.py  glyph.py  presets.py  preview.py  rng.py  settings.py  skeleton.py  style.py  svg_export.py  templates.py  validation.py
tests/: test_bezier.py  test_generation.py  test_rng.py  test_style.py
